fetching includes from server, tidied UI object up, commented

--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,20 @@
 .hidden {
   display: none;
 }
+
+footer {
+  border-top: 0.1rem solid;
+}
+
+header {
+  border-bottom: 0.1rem solid;
+}
+
+header>nav {
+  padding-bottom: 1em;
+}
+
+header>nav>button.active {
+  background: navy;
+  color: white;
+}
